--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ nav ul li a:hover::after{
 #about{
     padding: 80px 0;
     color: #d1d1d1;
+    background-color: #b19871;
 }
 
 .row{
@@ -185,6 +186,7 @@ nav ul li a:hover::after{
 /* --------------- services ----------------- */
 #services{
     padding: 30px 0;
+    background-color: #b19871;
 }
 
 .services-list{
@@ -195,7 +197,7 @@ nav ul li a:hover::after{
 }
 
 .services-list div{
-    background: #262626;
+    background: #362c1e;
     padding: 40px;
     font-size: 13px;
     font-weight: 300;
@@ -219,12 +221,13 @@ nav ul li a:hover::after{
 .services-list div:hover{
     background: #F4D03F;
     transform: translateY(-10px);
-    color: black;
+    color: #5c4b33;
 }
 
 /* ------------------------ portfolio ----------------------- */
 #portfolio{
     padding: 50px 0;
+    background-color: #b19871;
 }
 
 .work-list{
@@ -309,6 +312,10 @@ nav ul li a:hover::after{
 }
 
 /* ------------------ contact -------------------- */
+#contact{
+    background-color: #b19871;
+}
+
 .contact-left{
     flex-basis: 35%;
 }
@@ -322,7 +329,7 @@ nav ul li a:hover::after{
 }
 
 .contact-left p i{
-    color: #F4D03F;
+    color: #362c1e;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -335,7 +342,7 @@ nav ul li a:hover::after{
     text-decoration: none;
     font-size: 30px;
     margin-right: 15px;
-    color: #ababab;
+    color: #5c4b33;
     display: inline-block;
     transition: transform 0.5s;
 }
@@ -358,7 +365,7 @@ form input, form textarea{
     width: 100%;
     border: 0;
     outline: none;
-    background: #262626;
+    background: #362c1e;
     padding: 15px;
     margin: 15px 0;
     color: white;
@@ -377,7 +384,7 @@ form .btn2{
     width: 100%;
     text-align: center;
     padding: 25px;
-    background: #262626;
+    background: #c2ae91;
     font-weight: 300;
     margin-top: 20px;
 }
