--- a/style.css
+++ b/style.css
@@ -402,7 +402,7 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(aboutme.jpg);
+        background-image: url(home.jpg);
     }
     .header-text{
         margin-top: 100%;
